[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/gfx/hud/banner-hanging.png" type="Texture" id=1]
[ext_resource path="res://assets/gfx/hud/life.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/hud/coin-bronze.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/banner_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/ui/HUD.gd" type="Script" id=5]


[node name="HUD" type="CanvasLayer" groups=[
"GUI",
]]
script = ExtResource( 5 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Margin"]
margin_left = 24.0
margin_top = 24.0
margin_right = 1000.0
margin_bottom = 576.0
alignment = 2

[node name="Banner" type="TextureRect" parent="Margin/HBox"]
margin_left = 708.0
margin_right = 976.0
margin_bottom = 552.0
texture = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="Margin/HBox/Banner"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox1" type="HBoxContainer" parent="Margin/HBox/Banner/HBox"]
margin_left = 30.0
margin_right = 126.0
margin_bottom = 552.0

[node name="CoinCount" type="Label" parent="Margin/HBox/Banner/HBox/HBox1"]
margin_right = 32.0
margin_bottom = 552.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="TextureRect" parent="Margin/HBox/Banner/HBox/HBox1"]
margin_left = 36.0
margin_right = 96.0
margin_bottom = 552.0
texture = ExtResource( 3 )

[node name="HBox2" type="HBoxContainer" parent="Margin/HBox/Banner/HBox"]
margin_left = 150.0
margin_right = 238.0
margin_bottom = 552.0

[node name="LifeCount" type="Label" parent="Margin/HBox/Banner/HBox/HBox2"]
margin_right = 32.0
margin_bottom = 552.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="TextureRect" parent="Margin/HBox/Banner/HBox/HBox2"]
margin_left = 36.0
margin_right = 88.0
margin_bottom = 552.0
texture = ExtResource( 2 )
